<resources>
    <string name="app_name">Reactor</string>
    <string name="start">Start</string>
    <string name="reactor">Reactor:</string>
    <string name="fetching_data">Fetching data</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="set_update_dialog">Set update</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="save">Save</string>
    <string name="reactor_not_changed_title">Current Reactor is up to date!</string>
    <string name="reactor_not_changed_text">Currently set reactor is up to date so it has not been changed</string>
    <string name="update_failure_title">Reactor has not been updated!</string>
    <string name="update_failure_text">Application failed to get the current reactor from the web service</string>
    <string name="update_failure_no_web_api_ip_text">Reactor has not been updated because IP address of the web service is not set</string>
    <string name="forwarding_success_title">Forwarding has been set successfully!</string>
    <string name="forwarding_success_text">All incoming calls will be forwarded to:</string>
    <string name="forwarding_failure_title">Forwarding has not been set!</string>
    <string name="forwarding_no_reactor_text">The reactor is not set so there is no one to redirect the calls to.</string>
    <string name="forwarding_call_failure_text">The application failed to make a call so the forwarding has not been set.</string>
    <string name="missing_permissions_info">Application cannot provide its basic functionality without requested permissions</string>
    <string name="forwarding_canceled_info">Call forwarding canceled</string>
    <string name="forwarding_cancellation_failure_info">Failed to cancel forwarding</string>
    <string name="start_forwarding">Start</string>
    <string name="stop_forwarding">Stop</string>
    <string name="set_forwarding">Set</string>
    <string name="retry">Retry</string>
    <string name="tap_to_set_reactor">Tap to set reactor</string>
    <string name="past_update_rescheduled_warning">An update cannot be set to a moment in the past. The update was set for tomorrow</string>
    <string name="update_scheduling_error_info">The update could not be scheduled so it has been deleted</string>
    <string name="web_service_ip_text">Web service ip address</string>
    <string name="web_service_ip_hint">eg. 192.168.0.1</string>
    <string name="team_name_text">Name of the team on duty</string>
    <string name="team_name_hint">eg. Sky AM L2</string>
    <string name="web_service_port_text">Web service port number</string>
    <string name="web_service_port_hint">eg. 8080</string>
    <string name="no_reactor_info">No reactor available</string>
    <string name="no_reactor_hint">Synchronize with the web service</string>
    <string name="web_service_ip_not_configured_warning">The ip address of the web service must be configured in order to update the reactor</string>
    <string name="settings_btn_content_description">Go to settings</string>
    <string name="update_now_btn_content_description">Update the reactor now</string>
    <string name="add_update_btn_content_description">Add new update</string>
    <string name="update_type_switch_content_description">Switch between repeating and one-time update</string>
    <string name="update_preconfigured_phone_number_hint">Configure phone number (optional)</string>
    <string name="update_preconfigured_phone_indicator_content_description">Icon indicating whether the preconfigured phone number is added to the update</string>
    <string name="preconfigured_phone_number_reactor_display_name">Custom phone number</string>

    <!-- Forwarding notification channel info -->
    <string name="forwarding_notification_channel_name">Forwarding notifications</string>
    <string name="forwarding_notification_channel_description">Notifications reporting results of the actions setting call forwarding</string>
</resources>
