<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="130dp"
    android:orientation="vertical"
    android:theme="@style/CardViewTheme">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:gravity="center"
            android:text="11:00"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/monday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/monday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/wednesday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/tuesday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/tuesday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/wednesday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/thursday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/thursday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/friday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/friday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/saturday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/saturday_short"
            android:textColor="@color/disabled" />

        <TextView
            android:id="@+id/sunday"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/round_day_toggle"
            android:gravity="center"
            android:text="@string/sunday_short"
            android:textColor="@color/disabled" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:weightSum="2">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>