<layout>
    <data>
        <variable
            name="viewModel"
            type="com.mattech.on_call.view_models.SettingsViewModel" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/widget_rounded_background"
            android:orientation="vertical"
            android:theme="@style/SettingsDialogTheme"
            tools:context="com.mattech.on_call.fragments.SettingsDialogFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/settings"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/web_service_ip_text" />

            <EditText
                android:id="@+id/web_service_ip"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:text="@{viewModel.settings.ip}"
                android:hint="@string/web_service_ip_hint"
                android:inputType="date"
                app:addTextChangedListener="@{viewModel.ipTextWatcher}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/web_service_port_text" />

            <EditText
                android:id="@+id/web_service_port"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:text="@{viewModel.settings.port}"
                android:hint="@string/web_service_port_hint"
                android:inputType="number"
                app:addTextChangedListener="@{viewModel.portTextWatcher}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/team_name_text" />

            <EditText
                android:id="@+id/team_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:text="@{viewModel.settings.team}"
                android:hint="@string/team_name_hint"
                app:addTextChangedListener="@{viewModel.teamTextWatcher}" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_btn_background"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </LinearLayout>

    </ScrollView>
</layout>