<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.mattech.on_call.fragments.MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_margin"
        android:text="@string/who_is_on_call" />

    <TextView
        android:id="@+id/on_call_person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="@dimen/component_margin"
        android:text="@string/fetching_data" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_margin"
        android:background="@drawable/rounded_btn"
        android:gravity="center"
        android:text="@string/start"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/component_margin"
        android:background="@drawable/rounded_btn"
        android:drawableStart="@drawable/settings"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/settings"
        android:textAllCaps="false" />

</LinearLayout>
