<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />
        <variable
            name="update"
            type="com.mattech.on_call.models.Update" />
    </data>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/main_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/enable_switch"
            android:clickable="true">

            <TextView
                android:id="@+id/update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@{update.enabled ? @android:color/black : @color/disabledActive}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/date_container"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/update_preconfigured_phone_indicator_content_description"
                android:src="@drawable/call_forwarding_icon"
                android:tint="@{update.enabled ? @color/enabledActive : @color/disabledInactive}"
                android:visibility="@{update.preconfiguredPhoneNumber.empty ? View.GONE : View.VISIBLE}" />

            <FrameLayout
                android:id="@+id/date_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginHorizontal="8dp">

                <TextView
                    android:id="@+id/update_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@{update.exactDate}"
                    android:textColor="@{update.enabled ? @color/disabledActive : @color/disabledInactive}"
                    android:visibility="@{update.isOneTimeUpdate ? View.VISIBLE : View.GONE}"
                    tools:text="19, Dec 2019" />

                <LinearLayout
                    android:id="@+id/update_days_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/DaysListStyle"
                    android:visibility="@{update.isOneTimeUpdate ? View.GONE : View.VISIBLE}">

                    <TextView
                        android:id="@+id/monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday_short"
                        android:textColor="@{update.getDayViewColor(0)}" />

                    <TextView
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday_short"
                        android:textColor="@{update.getDayViewColor(1)}" />

                    <TextView
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday_short"
                        android:textColor="@{update.getDayViewColor(2)}" />

                    <TextView
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday_short"
                        android:textColor="@{update.getDayViewColor(3)}" />

                    <TextView
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday_short"
                        android:textColor="@{update.getDayViewColor(4)}" />

                    <TextView
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday_short"
                        android:textColor="@{update.getDayViewColor(5)}" />

                    <TextView
                        android:id="@+id/sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday_short"
                        android:textColor="@{update.getDayViewColor(6)}" />

                </LinearLayout>

            </FrameLayout>

        </RelativeLayout>

        <Switch
            android:id="@+id/enable_switch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:checked="@{update.enabled}"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>
</layout>
