<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mattech.on_call.fragments.ReactorInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/no_reactor_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reactor_info"
            android:textColor="@color/gray"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/no_reactor_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:gravity="center"
            android:text="@string/no_reactor_hint"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reactor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fetching_data"
            android:textColor="@color/gray"
            android:textSize="26sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/reactor_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"
            android:text="@string/fetching_data"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/reactor_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/fetching_data"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:visibility="gone" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/update_now_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical|right"
        android:layout_marginRight="12dp"
        android:background="@drawable/oval_color"
        android:elevation="4dp"
        android:src="@drawable/sync_icon" />

</FrameLayout>
